[package]
name = "snowplow_tracker"
description = "A package for tracking Snowplow events in Rust apps"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.87"
uuid = { version = "1.1.2", features = ["v4", "serde"] }
url = "2.3.1"
futures = { version = "0.3.24", default-features = false }
lazy_format = "2.0.0"
itoa = "1.0.4"
thiserror = "1.0.37"
tracing = "0.1.37"

[dev-dependencies]
anyhow = "1.0.65"
clap = "4.0.17"
