[package]
name = "snowplow_tracker"
description = "A package for tracking Snowplow events in Rust apps"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json", "stream"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.87"
uuid = { version = "1.1.2", features = ["v4", "serde"] }
url = "2.2.2"
futures = { version = "0.3.14", default-features = false }
lazy_format = "2.0.0"
itoa = "1.0.1"
thiserror = "1.0.32"
tracing = "0.1.35"

[dev-dependencies]
anyhow = "1.0.65"
clap = { version = "4.0.17", features = ["derive"] }
serde_test = "1.0.147"
